Fix QR to point to frontend verification route

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_API_URL=https://farm-management-backend-yyae.onrender.com
+REACT_APP_FRONTEND_URL=https://farm-management-frontend-f4cf.vercel.app
